--- a/VRTEST/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/VRTEST/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -76,6 +76,33 @@ LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 
+[ContentBrowser]
+ContentBrowserDrawer.SourcesExpanded=True
+ContentBrowserDrawer.Locked=False
+ContentBrowserDrawer.FavoritesAreaExpanded=False
+ContentBrowserDrawer.PathAreaExpanded=True
+ContentBrowserDrawer.CollectionAreaExpanded=False
+ContentBrowserDrawer.FavoritesSearchAreaExpanded=False
+ContentBrowserDrawer.PathSearchAreaExpanded=False
+ContentBrowserDrawer.CollectionSearchAreaExpanded=False
+ContentBrowserDrawer.VerticalSplitter.SlotSize0=0.150000006
+ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
+ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
+ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
+ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
+ContentBrowserDrawer.ActiveTypeFilters=
+ContentBrowserDrawer.EnabledTypeFilters=
+ContentBrowserDrawer.ActiveFrontendFilters=
+ContentBrowserDrawer.EnabledFrontendFilters=
+ContentBrowserDrawer.SelectedPaths=/Game/ThirdPerson/Blueprints
+ContentBrowserDrawer.PluginFilters=
+ContentBrowserDrawer.Favorites.SelectedPaths=
+FavoritePaths=
+ContentBrowserDrawer.SelectedCollections=
+ContentBrowserDrawer.ExpandedCollections=
+ContentBrowserDrawer.ThumbnailSize=2
+ContentBrowserDrawer.CurrentViewType=1
+
 [EditorStartup]
 LastLevel=/Game/ThirdPerson/Maps/ThirdPersonMap
 
@@ -86,4 +113,67 @@ InstalledPlugins=XRVisualization
 
 [AssetEditorSubsystem]
 CleanShutdown=False
+
+[ContentBrowserRecent]
+MRUItem0=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+
+[DetailCategories]
+BP_ThirdPersonCharacter_C.Input=True
+BP_ThirdPersonCharacter_C.Tick=True
+BP_ThirdPersonCharacter_C.Camera=True
+BP_ThirdPersonCharacter_C.Character=True
+BP_ThirdPersonCharacter_C.Pawn=True
+BP_ThirdPersonCharacter_C.Replication=True
+BP_ThirdPersonCharacter_C.Rendering=True
+BP_ThirdPersonCharacter_C.Actor=True
+BP_ThirdPersonCharacter_C.Collision=True
+BP_ThirdPersonCharacter_C.HLOD=True
+BP_ThirdPersonCharacter_C.WorldPartition=True
+BP_ThirdPersonCharacter_C.Events=True
+
+[AssetEditorToolkitTabLocation]
+/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter=1
+
+[/Script/BlueprintGraph.BlueprintEditorSettings]
+bDrawMidpointArrowsInBlueprints=False
+bShowGraphInstructionText=True
+bHideUnrelatedNodes=False
+bShowShortTooltips=True
+bSplitContextTargetSettings=True
+bExposeAllMemberComponentFunctions=True
+bShowContextualFavorites=False
+bExposeDeprecatedFunctions=False
+bCompactCallOnMemberNodes=False
+bFlattenFavoritesMenus=True
+bAutoCastObjectConnections=False
+bShowViewportOnSimulate=False
+bSpawnDefaultBlueprintNodes=True
+bHideConstructionScriptComponentsInDetailsView=True
+bHostFindInBlueprintsInGlobalTab=True
+bNavigateToNativeFunctionsFromCallNodes=True
+bDoubleClickNavigatesToParent=True
+bEnableTypePromotion=True
+TypePromotionPinDenyList=("string","text","softclass")
+BreakpointReloadMethod=RestoreAll
+bEnablePinValueInspectionTooltips=True
+bEnableNamespaceEditorFeatures=False
+bFavorPureCastNodes=False
+SaveOnCompile=SoC_Never
+bJumpToNodeErrors=False
+bAllowExplicitImpureNodeDisabling=False
+bShowActionMenuItemSignatures=False
+bBlueprintNodeUniqueNames=False
+bShowDetailedCompileResults=False
+CompileEventDisplayThresholdMs=5
+NodeTemplateCacheCapMB=20.000000
+bShowInheritedVariables=False
+bAlwaysShowInterfacesInOverrides=True
+bShowParentClassInOverrides=True
+bShowEmptySections=True
+bShowAccessSpecifier=False
+Bookmarks=()
+PerBlueprintSettings=()
+bIncludeCommentNodesInBookmarksTab=True
+bShowBookmarksForCurrentDocumentOnlyInTab=False
+GraphEditorQuickJumps=()
 
